--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "npm run build && gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -31,5 +30,5 @@
   "devDependencies": {
     "gh-pages": "^2.0.1"
   },
-  "homepage": "https://borimao.github.io/custombookmark/",
+  "homepage" : "http://borimao.github.io/custombookmark",
 }
